[package]
name = "nomosize"
version = "0.1.0"
authors = ["Oleg Dashevskii <olegdashevskii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
humansize = "1.0"
pathdiff = "0"
prettytable-rs = "^0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
